# li-calendar-neo

./: .gitignore  README.md  biome.json  holidays.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
src/: debugConst.ts  global.css  main.tsx
src-tauri/: Cargo.toml  installer.nsi  macos-Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: app_runtime.rs  commands.rs  lib.rs  main.rs  menu.rs  window_manager.rs
src-tauri/src/app_runtime/: config.rs  desktop.rs  macos.rs  main_window.rs  shared.rs  tray_icon_px.rs  windows.rs
src-tauri/src/app_runtime/macos/: tray.rs  tray_bar_icon.rs  tray_calendar_icon.rs  tray_lunarbar_calendar_icon.rs
src-tauri/src/app_runtime/shared/: tray.rs
src-tauri/src/app_runtime/windows/: hook_runtime.rs  startup.rs  tray.rs
src-tauri/src/commands/: common.rs  macos.rs  windows.rs
src-tauri/src/menu/: macos_main_menu.rs  main_menu.rs  taskbar_context_menu.rs  tray_menu.rs
src-tauri/src/window_manager/: shared.rs  windows.rs
src-tauri/src/window_manager/macos/: popup.rs
src-tauri/src/window_manager/shared/: main_window.rs  overlay.rs  popup_manager.rs
src-tauri/src/window_manager/windows/: desktop_widget.rs  main_window.rs  taskbar_popup.rs
src-tauri/src/windows_hook/: clock_window.rs  mod.rs  mouse_hook.rs  registry_clock.rs  state.rs  types.rs  window_utils.rs
src/components/: About.tsx
src/components/calendar/: CalendarView.tsx
src/components/settings/: Settings.tsx
src/constants/: env.ts  link.ts  soft.ts  window.ts
src/enums/: trayClockEnum.ts
src/hooks/: useWindowCornerMask.ts
src/hooks/calender/: CalendarViewContext.tsx  useCalendarPin.ts  useCalendarSwipeMonth.ts  (+4 more)
src/http/: baike.ts
src/services/: holidayAdapter.ts  holidayService.ts
src/styles/: calendarShellVariables.css  useCalendarViewStyles.ts
src/sync/: configStore.ts
src/utils/: platform.ts  tauriUtils.ts
src/windows/: DesktopWindow.tsx  MacosPopupWindow.tsx  MainWindow.tsx  PopupWindow.tsx
(+29 files in other folders)
