[package]
name = "li-calendar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "li_calendar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21"
tokio = { version = "1.51", features = ["sync"] }
tauri-plugin-positioner = "2.3.1"
tauri-plugin-store = "2.4.2"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(windows)'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_System_Registry",
  "Win32_Globalization",
  "Win32_UI_Accessibility",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }
chrono = "0.4.44"
cocoa = "0.26.1"
objc = "0.2.7"
objc2 = "0.6.4"
dispatch = "0.2"
tiny-skia = "0.12"
fontdb = "0.23"
fontdue = "0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
cargo-clippy = []

# 减少文件体积，配置完全来自官方 https://tauri.app/zh-cn/concept/size/
[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true # 启用链接时优化。
opt-level = "z" # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort" # 通过禁用 panic 处理程序来提高性能。
strip = true # 确保移除调试符号。
